syntax = "proto3";

package cmdctrl;


service CmdCtrl {
    rpc RingUpdate(Ring) returns (RingUpdateResult) {}
    rpc Reload(EmptyMsg) returns (StatusMsg) {}
    rpc Restart(EmptyMsg) returns (StatusMsg) {}
    rpc Start(EmptyMsg) returns (StatusMsg) {}
    rpc Stop(EmptyMsg) returns (StatusMsg) {}
    rpc Exit(EmptyMsg) returns (StatusMsg) {}
    rpc Stats(EmptyMsg) returns (StatsMsg) {}
    rpc HealthCheck(EmptyMsg) returns (HealthCheckMsg) {}
}

message RingUpdateResult {
    int64 newversion = 1;
}

message StatsMsg {
    bytes statsjson = 1;
}

message EmptyMsg {}

message StatusMsg {
    bool status = 1;
    string msg = 2;
}

message Ring {
    int64 version = 1;
    bytes ring = 2;
}

message HealthCheckMsg {
    bool status = 1;
    string msg = 2;
    int64  ts = 3;
}
